<resources>
    <string name="app_name">Tipper</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing">Amazing (25%)</string>
    <string name="good">Good (20%)</string>
    <string name="fair">Fair (15%)</string>
    <string name="calculate">Calculate</string>
    <string name="round_tip">Round Tip?</string>
    <string name="tip_result">Tip Result</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>